[package]
name = "laughing-broccoli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
